; ModuleID = '/home/carl/AnghaBench/h2o/deps/hiredis/extr_async.c_redisAsyncCommandArgv.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/hiredis/extr_async.c_redisAsyncCommandArgv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDIS_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redisAsyncCommandArgv(i32* %0, i32* %1, i8* %2, i32 %3, i8** %4, i64* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8**, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i8** %4, i8*** %12, align 8
  store i64* %5, i64** %13, align 8
  %17 = load i32, i32* %11, align 4
  %18 = load i8**, i8*** %12, align 8
  %19 = load i64*, i64** %13, align 8
  %20 = call i32 @redisFormatSdsCommandArgv(i32* %14, i32 %17, i8** %18, i64* %19)
  store i32 %20, i32* %15, align 4
  %21 = load i32, i32* %15, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %6
  %24 = load i32, i32* @REDIS_ERR, align 4
  store i32 %24, i32* %7, align 4
  br label %35

25:                                               ; preds = %6
  %26 = load i32*, i32** %8, align 8
  %27 = load i32*, i32** %9, align 8
  %28 = load i8*, i8** %10, align 8
  %29 = load i32, i32* %14, align 4
  %30 = load i32, i32* %15, align 4
  %31 = call i32 @__redisAsyncCommand(i32* %26, i32* %27, i8* %28, i32 %29, i32 %30)
  store i32 %31, i32* %16, align 4
  %32 = load i32, i32* %14, align 4
  %33 = call i32 @sdsfree(i32 %32)
  %34 = load i32, i32* %16, align 4
  store i32 %34, i32* %7, align 4
  br label %35

35:                                               ; preds = %25, %23
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32 @redisFormatSdsCommandArgv(i32*, i32, i8**, i64*) #1

declare dso_local i32 @__redisAsyncCommand(i32*, i32*, i8*, i32, i32) #1

declare dso_local i32 @sdsfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
